# Caracal

./: CMakeLists.txt  CMakePresets.json  README.md
Source/: CMakeLists.txt
Source/Caracal/: API.h  Defines.h
Source/Caracal/CodeGen/: CppCodeGenerator.cpp  CppCodeGenerator.h
Source/Caracal/Debug/: ByteCodeDisassembler.cpp  ByteCodeDisassembler.h  Diagnostic.h  DiagnosticKind.h  DiagnosticLevel.h  DiagnosticsBag.cpp  DiagnosticsBag.h  ParseTreePrinter.cpp  ParseTreePrinter.h  TypedTreePrinter.cpp  TypedTreePrinter.h
Source/Caracal/Semantic/: BoolValue.cpp  BoolValue.h  Discard.cpp  Discard.h  EnumDefinition.h  Field.cpp  Field.h  FunctionDefinition.cpp  FunctionDefinition.h  I32Value.cpp  I32Value.h  Parameter.h  Scope.h  Type.cpp  Type.h  TypeChecker.cpp  TypeChecker.h  TypeCheckerOptions.h  TypeDatabase.h  TypeDefinition.h  TypedAssignmentStatement.h  TypedBinaryExpression.cpp  TypedBinaryExpression.h  TypedConstant.cpp  TypedConstant.h  TypedEnumDefinitionStatement.h  TypedEnumValueAccessExpression.cpp  TypedEnumValueAccessExpression.h  TypedExpression.cpp  TypedExpression.h  TypedExpressionStatement.h  TypedFieldAccessExpression.cpp  TypedFieldAccessExpression.h  TypedFieldDefinitionNode.cpp  TypedFieldDefinitionNode.h  TypedFunctionCallExpression.cpp  TypedFunctionCallExpression.h  TypedFunctionDefinitionStatement.cpp  TypedFunctionDefinitionStatement.h  TypedIfStatement.cpp  (+18 more)
Source/Caracal/Syntax/: ArgumentsNode.cpp  ArgumentsNode.h  AssignmentStatement.h  BinaryExpression.h  BlockNode.cpp  BlockNode.h  BoolLiteral.cpp  BoolLiteral.h  BreakStatement.cpp  BreakStatement.h  ConstantDeclaration.h  CppBlockStatement.cpp  CppBlockStatement.h  DiscardLiteral.h  EnumDefinitionStatement.cpp  EnumDefinitionStatement.h  EnumFieldDeclaration.cpp  EnumFieldDeclaration.h  ErrorExpression.h  Expression.h  ExpressionStatement.cpp  ExpressionStatement.h  FunctionCallExpression.cpp  FunctionCallExpression.h  FunctionDefinitionStatement.cpp  FunctionDefinitionStatement.h  GroupingExpression.cpp  (+45 more)
(+735 files in other folders)
